--- a/user-service/tsconfig.json
+++ b/user-service/tsconfig.json
@@ -7,7 +7,8 @@
     "strict": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "resolveJsonModule": true
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   },
   "include": [
     "src/**/*.ts"
