--- a/user-service/tsconfig.json
+++ b/user-service/tsconfig.json
@@ -8,7 +8,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "experimentalDecorators": true,
-    "emitDecoratorMetadata": true
+    "emitDecoratorMetadata": true,
   },
   "include": [
     "src/**/*.ts"
