--- a/product-service/package.json
+++ b/product-service/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.9.0",
     "express": "^5.1.0",
     "pg": "^8.15.5",
     "reflect-metadata": "^0.2.2",
@@ -21,6 +22,7 @@
     "typescript": "^5.8.3"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/express": "^5.0.1"
   }
 }
