--- a/product-service/package.json
+++ b/product-service/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "node --inspect=0.0.0.0:9230 -r ts-node/register src/index.ts"
@@ -18,11 +18,14 @@
     "pg": "^8.15.5",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
-    "typeorm": "^0.3.22",
-    "typescript": "^5.8.3"
+    "typeorm": "^0.3.22"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
-    "@types/express": "^5.0.1"
+    "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.2",
+    "typescript": "^5.8.3"
   }
 }
